tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/int64_to_int32.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int = 5l

